<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_data_entry"
    tools:context="com.sg.ranaz.trackingitemsdemoapp.DataEntryActivity">


    <ScrollView
        android:id="@+id/homeScrollViewID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

    <TextView
        android:text="@string/name"
        android:textSize="15sp"
        android:textColor="#660000"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/homepage_ItemName_EditTextID"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:hint="Ex: table, chair..."
            android:enabled="true"
            android:focusable="true"
            android:textColor="#000000"
            android:layout_marginTop="2dp"
            android:inputType="text"
            >
        </EditText>


    <TextView
        android:text="@string/desc"
        android:textSize="15sp"
        android:textColor="#660000"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/homepage_ItemDesc_EditTextID"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:hint="Description about the item"
        android:enabled="true"
        android:focusable="true"
        android:textColor="#000000"
        android:layout_marginTop="2dp"
        android:inputType="text"
        >
    </EditText>

    <TextView
        android:text="@string/loc"
        android:textSize="15sp"
        android:textColor="#660000"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/homepage_ItemLocation_EditTextID"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:hint="Item Location"
        android:enabled="true"
        android:focusable="true"
        android:textColor="#000000"
        android:layout_marginTop="2dp"
        android:inputType="text"
        >
    </EditText>


        <TextView
            android:text="@string/cost"
            android:textSize="15sp"
            android:textColor="#660000"
            android:textStyle="normal"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/homepage_ItemCost_EditTextID"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:hint="Ex: 100"
            android:enabled="true"
            android:focusable="true"
            android:textColor="#000000"
            android:layout_marginTop="2dp"
            android:inputType="phone"
            />


    <ImageView
        android:id="@+id/homepage_ItemImage_ImageViewID"
        android:layout_height="200dp"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:clickable="false"
        android:src="@drawable/noimage"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <ImageView
            android:id="@+id/homepage_CameraItemImage_ImageViewID"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight=".5"
            android:src="@drawable/cam"/>
        <ImageView
            android:id="@+id/homepage_BrowseItemImage_ImageViewID"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight=".5"
            android:src="@drawable/folder"
            android:visibility="visible"/>
    </LinearLayout>

    </LinearLayout>


    </ScrollView>

</RelativeLayout>
